<resources>

    <!--Titles-->
    <string name="app_name">Polaroid XP</string>
    <string name="title_activity_test_settings">TestSettings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="title_activity_fullscreen_image">Image</string>

    <!--Menu Options-->
    <string name="action_settings">Settings</string>
    <string name="action_testsettings">TestSettings</string>
    <string name="action_gallery_sort">Sort</string>
    <string name="action_gallery_select_all">Select All</string>
    <string name="action_gallery_decode_selected">Shake Selected Images</string>

    <!--File Paths-->
    <string name="mainImagesFolder">polaroidXP</string>
    <string name="jpegImagesFolder">polaroidXP/JpegImages</string>
    <string name="tiffImagesFolder">polaroidXP/TiffImages</string>
    <string name="filterImagesFolder">polaroidXP/FilterImages</string>

    <!--Internal Page-->
    <string name="default_caption">Default Caption</string>

    <!--Settings Titles-->
    <string name="Picture_Border_Setting_Title">Polaroid Picture Border</string>
    <string name="Signed_Photo_Setting_Title">Photo Message</string>
    <string name="Notification_Setting_Title">Notifications</string>
    <string name="Support_Us_Setting_Title">"                                  Support Us"</string>

    <!--Settings Descriptions-->
    <string name="Border_Setting_Description">Set the Polaroid Border on pictures</string>
    <string name="Signature_Setting_Description">Enter text above for a message on photos</string>
    <string name="Notification_Setting_Description">Notifications are sent once a day if a photo is left unfinished</string>

    <!--Settings Keys-->
    <string name="Picture_Border_Key">Border</string>
    <string name="Signed_Photo_Key">Message</string>
    <string name="Notification_Setting_Key">Notification</string>
    <string name="Support_Us_Key">Support</string>


    <!--Trash Ignore below this -->

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
