


<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:key="@string/Picture_Border_Key"
        android:title="@string/Picture_Border_Setting_Title"
        android:summary="@string/Border_Setting_Description"
        android:defaultValue="true"
        />

    <EditTextPreference
        android:key="@string/Signed_Photo_Key"
        android:title="@string/Signed_Photo_Setting_Title"
        android:summary="@string/Signature_Setting_Description"
        android:defaultValue="@string/default_message"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        />

    <SwitchPreference
        android:key="@string/Notification_Setting_Key"
        android:title="@string/Notification_Setting_Title"
        android:summary="@string/Notification_Setting_Description"
        android:defaultValue="true"
        />
    <Preference
        android:key="@string/Support_Us_Key"
        android:title="@string/Support_Us_Setting_Title"
        android:summary=""
        android:selectable="true"
        />


</PreferenceScreen>